Dodaj style css

--- a/style.css
+++ b/style.css
@@ -6,4 +6,38 @@
 
 html {
     scroll-behavior: smooth;
+    font-family: 'Roboto', sans-serif;
+}
+
+header {
+    height: 100vh;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background-image: url(./img/background.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+header h1 {
+    margin-bottom: 5px;
+    padding-bottom: 2px;
+    border-bottom: 1px solid black;
+}
+
+.all_places {
+    padding: 20px;
+}
+
+.single_place img {
+    width: 100%;
+}
+
+footer {
+    padding: 20px;
+    background-color: darkblue;
+    color: white;
+    text-align: center;
 }
