--- a/style.css
+++ b/style.css
@@ -27,15 +27,15 @@ header h1 {
     border-bottom: 1px solid black
 }
 
-.all_places {
+.all_dishes {
     padding: 20px;
 }
 
-.single_place {
+.dish {
     margin: 10px auto;
 }
 
-.single_place img {
+.dish img {
     width: 100%;
 }
 
