--- a/style.css
+++ b/style.css
@@ -45,3 +45,20 @@ footer {
     color: white;
     text-align: center;
 }
+
+@media screen and (min-width: 768px) {
+    .dishes {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .dish {
+        width: 47%;
+    }
+    .dish img {
+        width: 100%;
+        height: 244px;
+        object-fit: cover;
+    }
+}
