Added dropdown menu, modals

--- a/style.css
+++ b/style.css
@@ -3,52 +3,36 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 body {
     line-height: 1.5;
-
+    background-image: url('./img/bg.svg');
+    background-color: #fff;
+    color: #144662;
+    scroll-behavior: smooth;
 }
+
 html {
     scroll-behavior: smooth;
     font-family: 'Montserrat', sans-serif;
 }
 
 .float-right {
-    float: right!important;
-}
-
-.btn-group-sm>.btn, .btn-sm {
-    padding: 0.25rem 0.5rem;
-    
+    float: right !important;
 }
 
 header {
-    height: 100vh;
     padding: 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    background-image: url('./img/background.jpg');
-    background-size: cover;
-    background-position: 30% 0;
 }
 
 header h1 {
     margin-bottom: 5px;
     padding-bottom: 2px;
     border-bottom: 1px solid black
-}
-
-.all_dishes {
-    padding: 20px;
-}
-
-.dish {
-    margin: 10px auto;
-}
-
-.dish img {
-    width: 100%;
 }
 
 footer {
@@ -58,28 +42,69 @@ footer {
     text-align: center;
 }
 
-@media screen and (min-width:768px) {
-    .dishes {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
-    .dish {
-        width: 47%;
-    }
-    .dish img {
-        width: 100%;
-        height: 244px;
-        object-fit: cover;
-    }
-}
 .rounded {
-    border-radius: 0.25rem!important;
+    border-radius: 0.25rem !important;
 }
+
+
+element.style {
+    display: block;
+    padding-right: 17px;
+}
+
+.modal.fade .modal-dialog {
+    transition: none;
+}
+
+*,
+::after,
+::before {
+    box-sizing: border-box;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+    background-color: #fff;
+    margin: 10% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 600px;
+}
+
+.close-button {
+    color: #888;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.img {
+    vertical-align: middle;
+}
+
 .row {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -15px;
     margin-left: -15px;
+    margin-right: -15px;
+}
+
+.container {
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-left: auto;
+    margin-right: auto;
 }
