--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+div {
+    display: block;
+}
+
 body {
     line-height: 1.5;
     background-image: url('./img/bg.svg');
@@ -17,22 +21,15 @@ html {
     font-family: 'Montserrat', sans-serif;
 }
 
-.float-right {
-    float: right !important;
-}
-
 header {
-    padding: 20px;
-    display: flex;
+    background-image: url('./img/hedi.jpg');
+    background-position: center;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-}
-
-header h1 {
-    margin-bottom: 5px;
-    padding-bottom: 2px;
-    border-bottom: 1px solid black
+    background-size: cover;
+    background-position: top;
+    background-repeat: no-repeat;
 }
 
 footer {
@@ -101,10 +98,36 @@ element.style {
     margin-right: -15px;
 }
 
-.container {
+.container_1 {
     width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.row.equal-height {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.row.equal-height .col-md-4 {
+    display: flex;
+}
+
+.row.equal-height .col-md-4>div {
+    flex-grow: 1;
+}
+
+.card {
+    padding: 10px;
+}
+
+h1 {
+    font-family: 'Roboto Thin', Arial, sans-serif;
+    font-weight: 400;
+}
+
+.error {
+    color: red;
 }
